contact-form field spacing fix

--- a/css/contact.styl
+++ b/css/contact.styl
@@ -30,65 +30,63 @@
 .contact-container
 	display flex
 	flex-direction column
-	flex 100%
-	@media screen and (min-width 601px)
-		width 60em
-		margin 0 auto
+	flex 100%	
 	.headline
 		display flex
 		flex-flow row
 		justify-content center
-		order 1
 		margin-bottom 1em
-	form
+	.contact-body
 		display flex
-		flex-direction column
-		order 2
-		padding-top 1em
-		margin-bottom 3em
-		box-shadow 1px 2px 5px #888
-		padding-bottom 2em
-		label, input, textarea
+		flex-flow column
+		form
 			display flex
-		label
-			font-family 'Raleway'
-			flex auto auto 100%
-			flex-flow column
-			font-size 1.2em
-			margin-bottom 1em
-		input
-			font-size 1em
-			height 2.5em
-			font-family 'Lato'
-			font-weight 300
-			margin-top 0.3em
-		textarea
-			height 9em
-
-		[type='submit']
-			width 7.5em
-			height 3.8em
-			border 4px solid #f7f406
-			background white
-			text-transform uppercase
-			font-family 'Raleway'
-			font-weight 400
-			transition background 0.5s, border 0.5s
-			align-self flex-end
-			margin-right 0.5em
-			&:hover
-				background #41CC7F
-				border #41CC7F
-
-		.contact-info
-			display flex
-			flex-flow column
-			label
+			flex-direction column
+			padding-top 1em
+			margin-bottom 3em
+			box-shadow 1px 2px 5px #888
+			padding-bottom 2em
+			label, input, textarea
 				display flex
-				flex-direction column
-				input
+			label
+				font-family 'Raleway'
+				flex auto auto 100%
+				flex-flow column
+				font-size 1.2em
+				margin-bottom 1em
+			input
+				font-size 1em
+				height 2.5em
+				font-family 'Lato'
+				font-weight 300
+				margin-top 0.3em
+			textarea
+				height 9em
+
+			[type='submit']
+				width 7.5em
+				height 3.8em
+				border 0px solid white
+				background #f7f406
+				text-transform uppercase
+				font-family 'Raleway'
+				font-weight 400
+				transition background 0.5s
+				transition-timing-function cubic-bezier(0.7, 0, 0.3, 1)
+				align-self flex-end
+				margin-right 0.5em
+				&:hover
+					background #41CC7F
+
+			.contact-info
+				display flex
+				flex-flow column
+				label
 					display flex
-					margin 10px 0
+					flex-direction column
+					input
+						display flex
+						margin 10px 0
 		
 
 .nav-full
@@ -97,7 +95,7 @@
 	flex-flow column
 	text-align center
 	z-index 1
-	order 3
+	order 1
 	a
 		text-decoration none
 		font-size 1.3em
@@ -140,22 +138,35 @@
 
 @media screen and (min-width 601px)
 	.contact-container
-		flex-direction row
-		form
-			width 50em
-			.contact-info
-				flex-flow row
-				margin 1.4em auto
+		flex-direction column
+		width 60em
+		margin 0 auto
+		.contact-body
+			display flex
+			flex-flow row nowrap
+			form
+				order 1
+				width 100%
+				max-width 50em
+				.contact-info
+					flex-flow row
+					margin 0.8em auto
+					label
+						flex 50%
+						margin auto 1em 0em
+						input
+							margin-top 0.2em
 				label
-					flex 50%
-					margin auto 1em
-			label
-				margin 1.5em 1em
-				input
-					margin-top 0.8em
-				textarea
-					margin-top 0.8em
-					
+					margin 0.8em 1em
+					input
+						margin-top 0.2em
+					textarea
+						margin-top 0.8em
+				
+				[type='submit']
+					text-align center
+					padding-left 28px
+					margin-right 1.3em
 				
 
 // @media screen and (min-width 601px)
